# my-flask-app

./: .dockerignore  backup_Appjs.sh  check_full_stack.sh  create-database-structure.sh  create_frontend_structure.sh  deploy-all-bak.sh  deploy-all.sh  new-deploy-all.sh  old_check_flask_stack.sh  populate-database-yaml.sh  pyproject.toml  staging-test.txt  validate-staging.sh  verify_k8s.sh
.github/workflows/: cd-deploy-production.yaml  cd-deploy-staging.yaml  cd-deploy.yaml  ci-backend.yaml  ci-frontend.yaml  mlops-model-deploy.yaml  security-scan.yaml
backend/: Dockerfile  backend-deployment.yaml  create_test_structure.sh  deploy-backend.sh
backend/app/: __init__.py  db.py  db.py.bak  main.py  main.py.bak  main.py.bak2  main_old.py  models-hash.py  models.py  requirements.txt
backend/tests/: conftest.py  test_auth.py  test_db.py  test_health.py  test_users.py
backend/trackchanges/: flask-backend.yaml
database/: README.md
database/init/: init.sql
database/k8s/: postgres-secret.yaml  postgres-statefulset.yaml
frontend/: Dockerfile  Dockerfile.bak  deploy.sh  frontend-deployment.yaml  nginx.conf  nginx.conf.bak  package-lock.json  package.json  status.json
frontend/public/ingress/: status.json
frontend/src/: App.js  App.js.bak  App_bak.js  ProtectedRoute.jsx
frontend/src/api/: client.js
gitops/production/: app.yaml
gitops/staging/: app.yaml
helm/my-app/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
ingress/: flask-ingress.yaml
k8s/: ingress.yaml  my-ingress.yaml
scripts/: helm-deploy.sh  slack-notify.sh
(+28 files in other folders)
